package br.edu.acad.ifma.device.domain;

public enum DeviceType {
    ANDROID, IOS, WEB
}
