package br.edu.acad.ifma.device.domain;

public enum DeviceStatus {
    ACTIVE, INACTIVE
}
